--- a/spiro/index.html
+++ b/spiro/index.html
@@ -257,11 +257,11 @@
                     <input type="range" id="zoomSlider" min="0.1" max="5" value="1" step="0.05">
                 </div>
             </div>
+            <!-- Node configurations will be inserted here by JS -->
             <div id="nodes-config-container"></div>
-            <div id="simulation-controls-group"></div>
+            <!-- Global settings will be moved here by JS -->
             <button id="addNodeButton" class="button-secondary">Add Node</button>
-            <button id="resetNodesConfigButton" class="button-secondary">Reset Nodes Config</button>
-            <button id="resetTracesButton" class="button-danger">Reset Traces</button>
+            <button id="resetNodesConfigButton" class="button-secondary">Reset Nodes Config</button> <button id="resetTracesButton" class="button-danger">Reset Traces</button>
             <div class="button-row" id="memory-buttons-row">
                 <button id="memoryStoreButton" class="button-secondary">M+</button>
                 <button id="memoryRecallButton" class="button-secondary" disabled>MR</button>
@@ -289,6 +289,7 @@
             const startStopButton = document.getElementById('startStopButton');
             const downloadButton = document.getElementById('downloadButton');
             const globalSettingsGroup = document.getElementById('global-settings-group');
+            const setupPanel = document.getElementById('setup-panel'); // Get setup panel
             const memoryStoreButton = document.getElementById('memoryStoreButton');
             const memoryRecallButton = document.getElementById('memoryRecallButton');
             const memoryButtonsRow = document.getElementById('memory-buttons-row');
@@ -601,7 +602,7 @@
                     ${startAngleControlHtml} 
                     <div class="slider-container" id="node${nodeId}-length-control">
                         <label for="length${nodeId}">Length: <span id="length${nodeId}-val">${node.length}</span>px</label>
-                        <input type="range" id="length${nodeId}" min="10" max="250" value="${node.length}" data-nodeid="${nodeId}">
+                        <input type="range" id="length${nodeId}" min="10" max="${isFirstNode ? '1000' : '250'}" value="${node.length}" data-nodeid="${nodeId}">
                     </div>
                     <div class="color-picker-container" id="node${nodeId}-color-control">
                         <label for="color${nodeId}">Node Color (for trace):</label>
@@ -1092,6 +1093,10 @@
                 simBgColorPicker.value = currentTheme.bg; mainColorPickerEl.value = currentTheme.hl;
                 updateDynamicTheme(); 
                 addNode(); addNode(); 
+
+                // Move Global Settings group to its new position
+                setupPanel.insertBefore(globalSettingsGroup, addNodeButton);
+
                 setControlsVisibility(false); 
                 updateAddRemoveButtons(); 
                 resizeCanvas(); window.addEventListener('resize', resizeCanvas);
