--- a/nfo/index.html
+++ b/nfo/index.html
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <script src="js/store.js"></script>
+    <script src="js/stor.js"></script>
     <script src="js/api.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/ui.js"></script>
