Info2Go v.1 Prerelease.10

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -15,7 +15,10 @@
         <h1><img src="icons/i192.png" alt="Info2Go Icon" class="header-icon">Info2Go v.1</h1>
 
         <section id="locationsSection" class="hidden">
-            <h2>Locations</h2>
+            <div class="section-header">
+                <h2>Locations</h2>
+                <button id="globalRefreshButton" class="hidden small-refresh-button">Refresh All Stale</button>
+            </div>
             <div id="locationButtons">
                 <!-- Location buttons will be dynamically added here -->
             </div>
