Info2Go v.1 Prerelease.11

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -41,6 +41,9 @@
             <div>
                 <label for="apiKey">API Key:</label>
                 <input type="password" id="apiKey" name="apiKey">
+                <small id="getApiKeyLinkContainer" class="hidden">
+                    <a href="https://aistudio.google.com/app/apikey" target="_blank">Get Gemini Key for Free</a>
+                </small>
             </div>
             <div>
                 <label for="primaryColor">Primary Color:</label>
