Info2Go v.1 Release.3

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -47,7 +47,7 @@
             </div>
             <div>
                 <label for="primaryColor">Primary Color:</label>
-                <input type="color" id="primaryColor" name="primaryColor" value="#03DAC5">
+                <input type="color" id="primaryColor" name="primaryColor" value="#029ec5">
             </div>
             <div>
                 <label for="backgroundColor">Background Color (Content Area):</label>
