--- a/nfo/index.html
+++ b/nfo/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#03DAC5"/>
-    <title>Info2Go v.1</title>
+    <meta name="theme-color" content="#024f63"/>
+    <title>nfo2Go v.1</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icons/i32.png" type="image/png">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="icons/i192.png" alt="Info2Go Icon" class="header-icon">Info2Go v.1</h1>
+        <h1><img src="icons/i192.png" alt="nfo2Go Icon" class="header-icon">nfo2Go v.1</h1>
 
         <section id="locationsSection" class="hidden">
             <div class="section-header">
