nfo2go v.1 Published

--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./spiro/';">
+                    <td class="project-image-cell">
+                        <a href="./nfp/" tabindex="-1">
+                            <img src="./images/nfo.png" alt="Spirograph Playground Image">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./nfo/" tabindex="-1">
+                            <div>
+                                <h2>nfo2go v.1</h2>
+                                <p><b>nfo2Go:</b> Personal AI info hub. <strong>Use:</strong> 1. App Config: Add Gemini API Key (<a href="https://aistudio.google.com/app/apikey" target="_blank">get one free from Google AI Studio</a>) &amp; colors. 2. Locations: Add (e.g., 'Home' for 'Portland, OR'). 3. Info Structure: Add topics &amp; AI queries (e.g., 'Weather'). Click location to view; refresh as needed.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
