--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <a href="./nfo/" tabindex="-1">
                             <div>
                                 <h2>nfo2go v.1</h2>
-                                <p><b>nfo2Go:</b> Personal AI info hub. <strong>Use:</strong> 1. App Config: Add Gemini API Key (<a href="https://aistudio.google.com/app/apikey" target="_blank">get one free from Google AI Studio</a>) &amp; colors. 2. Locations: Add (e.g., 'Home' for 'Portland, OR'). 3. Info Structure: Add topics &amp; AI queries (e.g., 'Weather'). Click location to view; refresh as needed.</p>
+                                <p><b>nfo2Go:</b> Personal AI info hub. <strong>Use:</strong> 1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; colors. <br>2. Locations: Add (e.g., 'Home' for 'Portland, OR'). <br>3. Info Structure: Add topics &amp; AI queries (e.g., 'Weather'). Click location to view; data retained for offline use.</p>
                             </div>
                         </a>
                     </td>
