--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <a href="./nfo/" tabindex="-1">
                             <div>
                                 <h2>nfo2go v.1</h2>
-                                <p><b>nfo2Go:</b> Personal AI info hub. <strong>Use:</strong> 1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; colors. <br>2. Locations: Add (e.g., 'Home' for 'Portland, OR'). <br>3. Info Structure: Add topics &amp; AI queries (e.g., 'Weather'). Click location to view; data retained for offline use.</p>
+                                <p><b>nfo2Go:</b> Personal AI info hub. <br><strong>Use:</strong> 1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). <br>3. Info Structure: Add topics &amp; AI queries (e.g., 'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>Click location to view; data retained for offline use.</p>
                             </div>
                         </a>
                     </td>
