--- a/nfo/index.html
+++ b/nfo/index.html
@@ -26,9 +26,9 @@
 
         <section id="configurationSection">
             <h2>Configuration</h2>
-            <button id="btnLocationsConfig" disabled>Locations</button>
-            <button id="btnInfoCollectionConfig" disabled>Info Structure</button>
-            <button id="btnAppConfig">Application</button>
+            <button id="btnLocationsConfig" disabled>🌎 Locations</button>
+            <button id="btnInfoCollectionConfig" disabled>🛠 Structure</button>
+            <button id="btnAppConfig">⚙ App</button>
         </section>
     </div>
 
