nfo2go v.2 TEST.2

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -108,6 +108,7 @@
         <div class="modal-content large">
             <span class="close-button" data-modal-id="infoModal" aria-label="Close">&times;</span>
             <h2 id="infoModalTitle"></h2>
+            <p id="infoModalWeather" class="weather-text"></p> <!-- Added for weather -->
             <p id="infoModalUpdated" class="updated-text"></p>
             <button id="refreshInfoButton" class="hidden">Refresh</button>
             <div id="infoModalContent">
