kreft.us Update

--- a/index.html
+++ b/index.html
@@ -163,21 +163,6 @@
                         </a>
                     </td>
                 </tr>
-                <tr class="project-row" onclick="window.location.href='./pendulum/';">
-                    <td class="project-image-cell">
-                        <a href="./pendulum/" tabindex="-1">
-                            <img src="./images/pendulum.png" alt="Double Pendulum Sim Image">
-                        </a>
-                    </td>
-                    <td class="project-text-cell">
-                        <a href="./pendulum/" tabindex="-1">
-                            <div>
-                                <h2>Double Pendulum</h2>
-                                <p><b>Double Pendulum Simulator:</b> Explore chaotic motion with this interactive double pendulum simulator (v0.7). Adjust the lengths, masses, and starting angles of the pendulum bobs. Customize the simulation's background and the pendulum/trace color; the interface, including sliders with large themed knobs, dynamically adapts to your choices. Watch the physics-based simulation in real-time, see the trace path, and download it as an image. This PWA is installable and offers basic offline use.</p>
-                            </div>
-                        </a>
-                    </td>
-                </tr>
                 <tr class="project-row" onclick="window.location.href='./spiro/';">
                     <td class="project-image-cell">
                         <a href="./spiro/" tabindex="-1">
@@ -193,10 +178,10 @@
                         </a>
                     </td>
                 </tr>
-                <tr class="project-row" onclick="window.location.href='./spiro/';">
+                <tr class="project-row" onclick="window.location.href='./nfo/';">
                     <td class="project-image-cell">
                         <a href="./nfp/" tabindex="-1">
-                            <img src="./images/nfo.png" alt="Spirograph Playground Image">
+                            <img src="./images/nfo.png" alt="nfo2go Icon Image">
                         </a>
                     </td>
                     <td class="project-text-cell">
@@ -204,6 +189,21 @@
                             <div>
                                 <h2>nfo2go v.2</h2>
                                 <p><b>nfo2Go:</b> Personal AI info hub. Now with weather support. <br><strong>Use:</strong> <br>1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; set your theme colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). Also drag to re-order. <br>3. Info Structure: Add topics &amp; AI queries (e.g., 🌤️Weather:'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>4. Click location to view; data retained for offline use.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="project-row" onclick="window.location.href='./pendulum/';">
+                    <td class="project-image-cell">
+                        <a href="./pendulum/" tabindex="-1">
+                            <img src="./images/pendulum.png" alt="Double Pendulum Sim Image">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./pendulum/" tabindex="-1">
+                            <div>
+                                <h2>Double Pendulum</h2>
+                                <p><b>Double Pendulum Simulator:</b> Explore chaotic motion with this interactive double pendulum simulator (v0.7). Adjust the lengths, masses, and starting angles of the pendulum bobs. Customize the simulation's background and the pendulum/trace color; the interface, including sliders with large themed knobs, dynamically adapts to your choices. Watch the physics-based simulation in real-time, see the trace path, and download it as an image. This PWA is installable and offers basic offline use.</p>
                             </div>
                         </a>
                     </td>
