kreft.us Update.2

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </tr>
                 <tr class="project-row" onclick="window.location.href='./nfo/';">
                     <td class="project-image-cell">
-                        <a href="./nfp/" tabindex="-1">
+                        <a href="./nfo/" tabindex="-1">
                             <img src="./images/nfo.png" alt="nfo2go Icon Image">
                         </a>
                     </td>
